# cerberus

./: .gitignore  CMakeLists.txt  README.md  ascii-art.txt  cerberus  install.sh  main.c  main.h  pyproject.toml
core/: __init__.py  cerberus.c  cerberus.h
native/manifests/: chrome_com.cerberus.pm.json
src/cerberus/: __init__.py  cli.py
src/cerberus/automation/: __init__.py  discovery.py  engine.py  playwright_engine.py  policy.py  runner.py  selenium_engine.py  types.py
src/cerberus/automation/sites/: apple.py  base_site.py  facebook.py  github.py  google.py  linkedin.py  microsoft.py  twitter.py
src/cerberus/cli/: __init__.py  main.py
src/cerberus/core/: Makefile  __init__.py  cerberus.c  cerberus.h  models.py  password_manager.py
src/cerberus/gui/: __init__.py  main_window.py
src/cerberus/integrations/: __init__.py  bitwarden.py  chrome.py  keepass.py  lastpass.py
src/cerberus/native/: host.py
src/cerberus/native/manifests/: firefox_com.cerberus.pm.json
src/cerberus/tui/: __init__.py  app.py
webext/chrome/: background.js  manifest.json  popup.html
webext/firefox/: background.js  content.js  manifest.json  popup.html
